# kalavai-job-operator

./: Dockerfile  README.md  index.yaml  pyproject.toml
.github/workflows/: image.yml  release.yml
charts/kalavai_job/: Chart.yaml  values.yaml
charts/kalavai_job/templates/: cleanup_hook.yaml  crds.yaml  deployment.yaml  rbac.yaml  repos.yaml
crds/: job_manager.yaml
kalavai_job_operator/: job_operator.py  op.py
test/: job.yaml
